--- a/flask/flaskApp/templates/company-login.html
+++ b/flask/flaskApp/templates/company-login.html
@@ -1,41 +1,56 @@
-
 <html>
-	<head>
-  	<title>Oder Processing Application </title>
-	</head>
+  <head>
+    <title>Order Processing Application </title>
+    <link href="../static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  </head>
 
-	<body>
+  <body style="background-color:#ffe0b2;">
 
-  	<h1 style="color: chocolate;color-adjust: exact;">
-			<br>Order Processing System</br>
-		</h1>
-		<hr style="color: brown;width: auto;  display: block;
-    						margin-top: 0.5em;margin-bottom: 0.5em;
-    						margin-left: auto;margin-right: auto;
-    						border-style: inset; border-width: 10px;">
+    <h1 style="color: chocolate;color-adjust: exact; padding-left:250px;">
+      Order Processing System<br>
+    </h1>
 
-	{% block body %}
+    {% block body %}
 
-    <h1 style="padding-left: 250px;">Company Login</h1>
 
-		<div id="company-login">
-			<form action="" style="padding-left: 250px;" method="post">
-				<input id="company-user-id" type="text" placeholder="Company User ID" name="CompanyUserId" value="{{request.form.CompanyUserId}}"><br><br>
-				<input id="company-password" type="text" placeholder="Password" name="CompanyPassword" value="{{request.form.CompanyPassword}}"><br><br>
-				<input type="submit" value="Login">
-			</form>
-			<hr style="width: 500px;color: brown;height: 5px; margin-left: 200px; " >
+    <h5 style="padding-left:265px;"> Company Login </h5>
 
-			{% if error %}
-		  <p class=error style="padding-left: 250px;"><strong>Error:</strong> {{ error }} </p>
-		  {% endif %}
+    <div id="company-login" style="padding-left:250px;">
+      <div class="row">
+    	<form class="col s12" method="post">
+      	  <div class="row">
+       	    <div class="input-field col s4">
+              <input id="first_name" type="text" class="validate" name="CompanyUserId" value="{{request.form.CompanyUserId}}">
+              <label for="first_name">Company ID</label>
+       	    </div>
+      	  </div>
+	  <div class="row">
+       	    <div class="input-field col s4">
+              <input id="password" type="password" class="validate" name="CompanyPassword" value="{{request.form.CompanyPassword}}">
+          	<label for="password">Password</label>
+            </div>
+      </div>
+      <button class="btn waves-effect waves-light" type="submit" name="action"> Login
+	<i class="material-icons right">send</i>
+  		</button>
 
-			{% endblock %}
+      <button class="btn waves-effect waves-light" type="submit" name="action">
+	<a style="text-decoration:none;" href="{{url_for('registerCompany')}}">Register A Company</a>
+      </button>
 
-			<h1 style="padding-left: 200px;font-size: unset;color: steelblue;" >
-				<a href="{{url_for('registerCompany')}}"> New Company Account</a>
-			</h1>
-  		</div>
-	</body>
+      {% if error %}
+      <p class=error><strong>Error:</strong> {{ error }} </p>
+      {% endif %}
+
+      </form>
+    </div>
+</div>
+
+{% endblock %}
+</body>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="../static/js/materialize.js"></script>
 </html>
 
