--- a/flask/flaskApp/templates/employ-login.html
+++ b/flask/flaskApp/templates/employ-login.html
@@ -1,45 +1,53 @@
-
 <html>
-	<head>
-  		<title>Order Processing Application </title>
-		<link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
-	</head>
+  <head>
+    <title>Order Processing Application </title>
+    <link href="../static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  </head>
 
-	<body>
+  <body style="background-color:#ffe0b2;">
 
-  	<h1 style="color: chocolate;color-adjust: exact;">
-		<br>
-		Order Processing System
-		</br>
-	</h1>
-		<hr style="color: brown;width: auto;  display: block;
-    			   margin-top: 0.5em;margin-bottom: 0.5em;
-    			   margin-left: auto;margin-right: auto;
-    			   border-style: inset; border-width: 10px;">
+    <h1 style="color: chocolate;color-adjust: exact; padding-left:250px;">
+      Order Processing System<br>
+    </h1>
 
-	{% block body %}
-    <h1 style="padding-left: 250px;">Employ Login</h1>
-	  <div id="employ-login">
-		  <form action="" method="post" style="padding-left: 250px;">
-			  <input id="employ-user-id" type="text" placeholder="Employ ID" name="username" value="{{request.form.username}}"><br><br>
-			  <input id="employ-password" type="text" placeholder="Password" name="password" value="{{request.form.password}}"><br><br>
-			  <input class="btn btn-default" type="submit" value="Login">
-		  </form>
-
-		  {% if error %}
-		  <p class=error style="padding-left: 250px;"><strong>Error:</strong> {{ error }} </p>
-		  {% endif %}
+    {% block body %}
 
 
+    <h5 style="padding-left:265px;"> Employee Login </h5>
 
-			<hr style="width: 500px;color: brown;height: 5px; margin-left: 200px; " >
+    <div id="company-login" style="padding-left:250px;">
+      <div class="row">
+    	<form class="col s12" method="post">
+      	  <div class="row">
+       	    <div class="input-field col s4">
+              <input id="first_name" type="text" class="validate" name="username" value="{{request.form.username}}">
+              <label for="first_name">Username</label>
+       	    </div>
+      	  </div>
+	  <div class="row">
+       	    <div class="input-field col s4">
+              <input id="password" type="password" class="validate" name="password" value="{{request.form.password}}">
+          	<label for="password">Password</label>
+            </div>
+      </div>
+      <button class="btn waves-effect waves-light" type="submit" name="action"> Login </button>
 
-			<h1 style="padding-left: 200px;font-size: unset;color: steelblue;" >
-				<a href="{{url_for('registerUser')}}"> New Employee Account </a>
-			</h1>
-  		</div>
+      <button class="btn waves-effect waves-light" type="submit" name="action">
+	<a style="text-decoration:none;" href="{{url_for('registerUser')}}">New User</a>
+      </button>
 
-	{% endblock %}
-	</body>
+      {% if error %}
+      <p class=error><strong>Error:</strong> {{ error }} </p>
+      {% endif %}
+
+      </form>
+    </div>
+</div>
+
+{% endblock %}
+</body>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="../static/js/materialize.js"></script>
 </html>
-
