--- a/flask/flaskApp/templates/registerCompany.html
+++ b/flask/flaskApp/templates/registerCompany.html
@@ -1,36 +1,55 @@
 <html>
-	<head>
-  	    <title>Oder Processing Application </title>
-	</head>
-
-	<body>
-
-  	<h1 style="color: chocolate;color-adjust: exact;">
-			<br>Order Processing System</br>
+  <head>
+    <title>Order Processing Application </title>
+    <link href="../static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  </head>
+  
+  <body style="background-color:#ffe0b2;">
+    
+    <h1 style="color: chocolate;color-adjust: exact; padding-left:250px;">
+      Order Processing System<br>
     </h1>
-		<hr style="color: brown;width: auto;  display: block;
-    						margin-top: 0.5em;margin-bottom: 0.5em;
-    						margin-left: auto;margin-right: auto;
-    						border-style: inset; border-width: 10px;">
 
-	{% block body %}
+    {% block body %}
+    
+    
+    <h5 style="padding-left:265px;"> Register New Company </h5>
+    
+    <div id="company-login" style="padding-left:250px;">
+      <div class="row">
+    	<form class="col s12" method="post">
+      	  <div class="row">
+       	    <div class="input-field col s4">
+              <input id="first_name" type="text" class="validate" name="id" value="{{request.form.id}}">
+              <label for="first_name">Company ID</label>
+       	    </div>
+      	  </div>
+	  <div class="row">
+       	    <div class="input-field col s4">
+              <input id="password" type="password" class="validate" name="password" value="{{request.form.password}}">
+          	<label for="password">Password</label>
+            </div>
+      </div>
+      <button class="btn waves-effect waves-light" type="submit" name="action"> Register Company
+	<i class="material-icons right">send</i>
+  		</button>
+      
+      <button class="btn waves-effect waves-light" type="submit" name="action">
+	<a style="text-decoration:none;" href="{{url_for('companyLogin')}}">Already Registered?</a>
+      </button>
+      
+      {% if error %}
+      <p class=error><strong>Error:</strong> {{ error }} </p>
+      {% endif %}
+      
+      </form>
+    </div>
+</div>
 
-    <h1 style="padding-left: 250px;">Register New Company</h1>
+{% endblock %}
+</body>
 
-		<div id="company-login">
-			<form action="" style="padding-left: 250px;" method="post">
-				<input id="company-user-id" type="text" placeholder="Company User ID" name="id" value="{{request.form.id}}"><br><br>
-				<input id="company-password" type="text" placeholder="Password" name="password" value="{{request.form.password}}"><br><br>
-				<input type="submit" value="Register Company"> <button><a style="text-decoration:none;" href="{{url_for('companyLogin')}}">Already have an Account?</a></button>
-			</form>
-
-            {% if error %}
-		  <p class=error style="padding-left: 250px;"><strong>Error:</strong> {{ error }} </p>
-		  {% endif %}
-
-			<hr style="width: 500px;color: brown;height: 5px; margin-left: 200px; " >
-
-			{% endblock %}
-        </div>
-    </body>
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="../static/js/materialize.js"></script>
 </html>
