--- a/flask/flaskApp/static/css/navigation-bar.css
+++ b/flask/flaskApp/static/css/navigation-bar.css
@@ -1,5 +1,7 @@
 
 
+@import url('https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css');
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -7,6 +9,7 @@ ul {
     overflow: hidden;
     background-color: brown;
 		border-radius: 0.5pc;
+    width: 1225px;
 }
 
 li {
@@ -30,4 +33,27 @@ li a:hover:not(.active) {
     background-color: coral;
 		border-radius: 0.5pc;
 }
+
+.input-box {
+   height: 25px !important;
+}
+
+.profile-input-box {
+   height: 25px !important;
+   margin-left: 150px;
+
+}
+
+.logout-containt {
+   margin-left: 150px;
+   margin-top: 50px;
+   color: darkkhaki;
+}
+
+.order-table{
+  width: 1100px;
+	height: 600px;
+	margin-left: 50px;
+}
+
 
