User can edit profile data.

--- a/flask/flaskApp/templates/profile_data.html
+++ b/flask/flaskApp/templates/profile_data.html
@@ -45,19 +45,19 @@
 
 						<label for="current-employ-order-handler">Order Handler:</label>
   							<input type="radio" name="current-employ-authority" id="current-employ-order-handler"
-                       value="order-handler" style="margin-left: 100px;" readonly><br>
+                       value="order-handler" style="margin-left: 100px;" disabled><br>
 
 						<label for="current-employ-manager">Manager:</label>
   							<input type="radio" name="current-employ-authority" id="current-employ-manager"
-                       value="manager" style="margin-left: 100px;" readonly><br>
+                       value="manager" style="margin-left: 100px;" disabled><br>
 
 						<label for="current-employ-worker">Employ:</label>
   							<input type="radio" name="current-employ-authority" id="current-employ-worker" 
-                       value="employ-worker" style="margin-left: 100px;" readonly><br>
+                       value="employ-worker" style="margin-left: 100px;" disabled><br>
 
             <br><br>
 
-        <input id="submit-current-employ-account" type="submit" value="Submit" disabled>
+        <input id="submit-current-employ-account-btn" type="button" value="Submit" disabled>
 
 		</fieldset>
 	</form>
