--- a/flask/flaskApp/templates/user_logout.html
+++ b/flask/flaskApp/templates/user_logout.html
@@ -12,5 +12,7 @@
     <h4>
     		Click Here to Log in again!</br>
     </h4>
+
+    <p><a href="{{url_for('UserLogout')}}">Company Login</a></p>
 </div>
 
