--- a/flask/flaskApp/static/css/materialize.css
+++ b/flask/flaskApp/static/css/materialize.css
@@ -8580,3 +8580,7 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
     margin-bottom: 5em;
   }
 }
+
+.button a:link, a:visited {
+color: white;
+}
