--- a/flask/flaskApp/templates/profile_data.html
+++ b/flask/flaskApp/templates/profile_data.html
@@ -53,16 +53,24 @@
 
 						<label for="current-employ-worker">Employ:</label>
   							<input type="radio" name="current-employ-authority" id="current-employ-worker" 
-                       value="employ-worker" style="margin-left: 100px;" disabled><br>
+                       value="employ" style="margin-left: 100px;" disabled><br>
 
             <br><br>
 
         <input id="submit-current-employ-account-btn" type="button" value="Submit" disabled>
+        <input id="cancel-current-employ-account-btn" type="button" value="Cancel" disabled>
 
 		</fieldset>
 	</form>
 </div>
 
+<div id="EditedProfileErrorDialog" class="flora" title="Profile data Error"  hidden="hidden">
+      <label id="profile-deta-error-dialogtext"
+             style="text-align: center; color: brown; font-size: larger;">
+            Please, enter all the information regrading to the profile.
+      </label><br>
+
+</div>
 
 
 
