data table - load data    * filter data in table related to user    - give edit permission as user * manager / handler/ employ   - save edited data in exiting order using item id

--- a/flask/flaskApp/templates/order_data.html
+++ b/flask/flaskApp/templates/order_data.html
@@ -22,31 +22,34 @@
       </select>
       <br><br>
 
-      <p style="white-space: pre-wrap; color: brown; font-size: larger;"><b>Placed Order Detail:</b></p>
       <div id="placed-order-item-detail-dialogtext" style="
                  font-weight: bold; color: darkkhaki;">
       		<form action="/action_page.php">
         		<fieldset>
+          		Placed Order Date:
+            		<input class="input-box" id="item-detail-placed-order-date" type="date"
+                   		name="item-detail-expected-arriving-date" value=" "
+                   		style="margin-left: 100px;" readonly /><br><br>
           		Shipment-Company:
             		<input class="input-box" id="item-detail-shipment-company" type="text"
                    		name="item-detail-shipment-company" value=" "
-                   		style="margin-left: 100px;" /><br><br>
+                   		style="margin-left: 100px;" readonly /><br><br>
           		Tracking-Number:
             		<input class="input-box" id="item-detail-tracking-number" type="text"
                 		  name="item-detail-tracking-number" value=" "
-                   		style="margin-left: 116px;" /><br><br>
+                   		style="margin-left: 116px;" readonly /><br><br>
           		Tracking-Website:
             		<input class="input-box" id="item-detail-tracking-website" type="text"
                    		name="item-detail-tracking-website" value=" "
-                   		style="margin-left: 116px;" /><br><br>
+                   		style="margin-left: 116px;" readonly /><br><br>
           		Expected Arriving Date:
             		<input class="input-box" id="item-detail-expected-arriving-date" type="date"
                    		name="item-detail-expected-arriving-date" value=" "
-                   		style="margin-left: 100px;" /><br><br>
+                   		style="margin-left: 100px;" readonly /><br><br>
           		Arrived Date:
             		<input class="input-box" id="item-detail-arrived-date" type="date"
                    		name="item-detail-arrived-date" value=" "
-                   		style="margin-left: 100px;" /><br><br>
+                   		style="margin-left: 100px;" readonly /><br><br>
          		</fieldset>
       		</form>
       </div><br>
