manager can delete the order by disapporving.

--- a/flask/flaskApp/templates/order_data.html
+++ b/flask/flaskApp/templates/order_data.html
@@ -53,6 +53,13 @@
          		</fieldset>
       		</form>
       </div><br>
+      <p style="white-space: pre-wrap; color: brown; font-size: larger;"><b>Donot-Approve:</b></p>
+      <p style="white-space: pre-wrap; color: brown; font-size: larger;"><b>Please, check checkbox below to delete order
+                          detail from record.</b></p>
+         <input id="item-delete-donot-approved" type="checkbox"
+                   		style="margin-left: 100px;" disabled /><br>
+      <br>
+      
 </div>
 
 
