Updated app.py to account for required login routes

--- a/flask/flaskApp/templates/processing-window.html
+++ b/flask/flaskApp/templates/processing-window.html
@@ -16,7 +16,7 @@
   	      <li><a class="active" href="#!digital-order-form" id="digital-order-form-tag">Form</a></li>
   	      <li><a href="#!order-data" id="order-data-tag">OrderData</a></li>
   	      <li><a href="#!profile" id="profile-tag">Profile</a></li>
-  	      <li style="float:right"><a href="#!user-logout" id="user-logout-tag">Logout</a></li>
+  	      <li style="float:right"><a href="{{url_for('UserLogout')}}" id="user-logout-tag">Logout</a></li>
 	    </ul>
 	  </div>
 	  
