--- a/flask/flaskApp/templates/company-login.html
+++ b/flask/flaskApp/templates/company-login.html
@@ -10,12 +10,12 @@
     <h1 style="color: chocolate;color-adjust: exact; padding-left:250px;">
       Order Processing System<br>
     </h1>
-
+    
     {% block body %}
-
-
+    
+    
     <h5 style="padding-left:265px;"> Company Login </h5>
-
+    
     <div id="company-login" style="padding-left:250px;">
       <div class="row">
     	<form class="col s12" method="post">
@@ -28,29 +28,33 @@
 	  <div class="row">
        	    <div class="input-field col s4">
               <input id="password" type="password" class="validate" name="CompanyPassword" value="{{request.form.CompanyPassword}}">
-          	<label for="password">Password</label>
+              <label for="password">Password</label>
             </div>
       </div>
-      <button class="btn waves-effect waves-light" type="submit" name="action"> Login
-	<i class="material-icons right">send</i>
-  		</button>
-
+	  <button class="btn waves-effect waves-light" type="submit" name="action"> Login
+	    <i class="material-icons right">send</i>
+  	  </button>
+	  
       <button class="btn waves-effect waves-light" type="submit" name="action">
 	<a style="text-decoration:none;" href="{{url_for('registerCompany')}}">Register A Company</a>
       </button>
-
+      
       {% if error %}
       <p class=error><strong>Error:</strong> {{ error }} </p>
       {% endif %}
-
-      </form>
+      
+	</form>
+      </div>
     </div>
-</div>
+    
+    {% if message %}
+    <h1> {{ message }} </h1>
+    {% endif %}
 
 {% endblock %}
-</body>
-
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="../static/js/materialize.js"></script>
+  </body>
+  
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="../static/js/materialize.js"></script>
 </html>
 
