--- a/flask/flaskApp/templates/_header.html
+++ b/flask/flaskApp/templates/_header.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Oder Processing Application </title>
+    <title>Order Processing Application </title>
 
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -19,8 +19,6 @@
       // This function is used to avoid conflict of different version of jquery
       var $d = jQuery.noConflict();
     </script>
-   
+
 
   </head>
-
-
