--- a/flask/flaskApp/templates/registerUser.html
+++ b/flask/flaskApp/templates/registerUser.html
@@ -4,18 +4,18 @@
     <link href="../static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
-  
+
   <body style="background-color:#ffe0b2;">
-    
+
     <h1 style="color: chocolate;color-adjust: exact; padding-left:250px;">
       Order Processing System<br>
     </h1>
-    
+
     {% block body %}
-    
-    
+
+
     <h5 style="padding-left:265px;"> Employee Login </h5>
-    
+
     <div id="company-login" style="padding-left:250px;">
       <div class="row">
     	<form class="col s12" method="post">
@@ -50,49 +50,50 @@
 	  <div class="row">
        	    <div class="input-field col s4">
               <input id="position" type="text" class="validate" name="position" value="{{request.form.position}}">
-              <label for="password">Position</label>
+              <label for="position">Position</label>
             </div>
 	  </div>
 	  <div class="row">
        	    <div class="input-field col s4">
               <input id="department" type="text" class="validate" name="dept" value="{{request.form.dept}}">
-              <label for="password">Department</label>
+              <label for="department">Department</label>
             </div>
 	  </div>
 	  <div class="row">
        	    <div class="input-field col s4">
               <input id="companyName" type="text" class="validate" name="company" value="{{request.form.company}}">
-              <label for="password">Password</label>
+              <label for="companyName">Company Name</label>
             </div>
 	  </div>
-	  
+    <!--
 	  <div class="row">
        	    <div class="input-field col s4">
-	      <input id="reg-order-handler" type="radio" name="employ-authority" class="validate" value="order-handler">
+	      <input id="reg-order-handler" type="radio" name="employ-authority" class="validate" value=0>
               <label for="reg-order-handler">Order Handler</label>
-	      <input id="reg-manager" type="radio" name="employ-authority" class="validate"  value="manager">
+	      <input id="reg-manager" type="radio" name="employ-authority" class="validate"  value=1>
               <label for="reg-manager">Manager</label>
-	      <input id="reg-employ-worker" type="radio" name="employ-authority" class="validate"  value="employ">
+	      <input id="reg-employ-worker" type="radio" name="employ_authority" class="validate"  value="{{request.form.employ_authority}}">
               <label for="reg-employ-worker">Employ</label>
             </div>
 	  </div>
+  -->
 	  <button class="btn waves-effect waves-light" type="submit" name="action"> Register Account </button>
-	  
+
 	  <button class="btn waves-effect waves-light" type="submit" name="action">
 	    <a style="text-decoration:none;" href="{{url_for('login')}}"> Already Registered?</a>
 	  </button>
-	  
+
 	  {% if error %}
 	  <p class=error><strong>Error:</strong> {{ error }} </p>
 	  {% endif %}
-	  
+
 	</form>
       </div>
     </div>
-    
+
     {% endblock %}
   </body>
-  
+
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="../static/js/materialize.js"></script>
 </html>
